# sobol-qmc

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
benches/: generate.rs  initialize.rs  params.rs  skip.rs
examples/: print_seq.rs  print_seq_gauss.rs  print_seq_gauss_multi.rs  rate_benchmark.rs
src/: lib.rs  type_support.rs
src/params/: joe_kuo_d6.rs
tests/: params.rs  validate.rs
