[package]
name = "sobol-qmc"
version = "2.4.0"
authors = ["Weston Siegenthaler <westons@gmail.com>", "Junzhuo Zhou <junzhuo22@ucla.edu>"]
license = "BSD-3-Clause"
edition = "2024"
readme = "README.md"
homepage = "https://github.com/zao111222333/sobol-qmc"
repository = "https://github.com/zao111222333/sobol-qmc"
documentation = "https://docs.rs/sobol-qmc"
description = "A Sobol sequence generator for Rust"
categories = ["algorithms","science","simulation"]
keywords = ["sobol","low-discrepancy","mcmc","monte-carlo","quasirandom"]
include = ["/src", "build.rs", "README.md"]

[dependencies]
num-traits = "0.2"
statrs = "0.18"
thiserror = "2.0.16"

[build-dependencies]
libflate = "2"
quote = "1.0"
proc-macro2 = "1.0"
